headlamp-backend: Add packages for headlamp-server+frontend
This adds a number of scripts for managing the
backstage-plugin-headlamp-app-* packages which store the binaries.

See the README.md for information about the scripts and for
instructions.

Signed-off-by: René Dudfield <renesd@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .DS_Store
+
+packages/backstage-plugin-headlamp-app-darwin-arm64/bin/
+packages/backstage-plugin-headlamp-app-linux-x64-gnu/bin/
+packages/backstage-plugin-headlamp-app-win32-x64-msvc/bin/
+headlamp-backend/headlamp-repo/
