--- a/headlamp-backend/package.json
+++ b/headlamp-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@headlamp-k8s/backstage-plugin-headlamp-backend",
-  "version": "0.0.1-beta",
+  "version": "0.1.0-beta-1",
   "backstage": {
     "role": "backend-plugin",
     "pluginId": "headlamp",
