--- a/headlamp/package.json
+++ b/headlamp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@headlamp-k8s/backstage-plugin-headlamp",
-  "version": "0.0.1-beta",
+  "version": "0.1.0-beta-1",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
