--- a/headlamp/package.json
+++ b/headlamp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@headlamp-k8s/backstage-plugin-headlamp",
-  "version": "0.1.0-beta-1",
+  "version": "0.1.0-beta-2",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -25,16 +25,19 @@
   },
   "dependencies": {
     "@backstage/core-components": "^0.14.10",
-    "@backstage/core-plugin-api": "^1.10.0",
+    "@backstage/core-plugin-api": "^1.10.2",
+    "@backstage/plugin-kubernetes-react": "^0.5.2",
     "@backstage/theme": "^0.5.1",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.28.0",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0",
     "react-router-dom": "6.0.0-beta.0 || ^6.3.0"
   },
   "devDependencies": {
