--- a/headlamp/package.json
+++ b/headlamp/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@backstage/core-components": "^0.14.10",
     "@backstage/core-plugin-api": "^1.10.2",
+    "@backstage/plugin-kubernetes-common": "^0.9.4",
     "@backstage/plugin-kubernetes-react": "^0.5.2",
     "@backstage/theme": "^0.5.1",
     "@material-ui/core": "^4.9.13",
