--- a/headlamp-backend/package.json
+++ b/headlamp-backend/package.json
@@ -61,7 +61,7 @@
     "@backstage/backend-test-utils": "^1.1.0",
     "@backstage/cli": "^0.25.0",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.0",
-    "@types/express": "*",
+    "@types/express": "^5.0.2",
     "@types/supertest": "^2.0.8",
     "msw": "^2.0.8",
     "supertest": "^6.2.4"
