--- a/headlamp/package.json
+++ b/headlamp/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "@headlamp-k8s/backstage-plugin-headlamp",
-  "version": "0.1.0-beta-2",
+  "name": "@yolossn/backstage-plugin-headlamp",
+  "version": "0.1.0-alpha18",
+  "license": "Apache-2.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "license": "Apache-2.0",
-  "private": false,
   "publishConfig": {
     "access": "public",
     "main": "dist/index.esm.js",
     "types": "dist/index.d.ts"
   },
   "backstage": {
-    "role": "frontend-plugin"
+    "role": "frontend-plugin",
+    "pluginId": "headlamp",
+    "pluginPackages": [
+      "@yolossn/backstage-plugin-headlamp"
+    ]
   },
   "sideEffects": false,
   "scripts": {
@@ -24,38 +27,30 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/core-components": "^0.14.10",
-    "@backstage/core-plugin-api": "^1.10.2",
-    "@backstage/plugin-kubernetes-react": "^0.5.2",
-    "@backstage/theme": "^0.5.1",
+    "@backstage/core-components": "^0.17.0",
+    "@backstage/core-plugin-api": "^1.9.3",
+    "@backstage/plugin-kubernetes-react": "^0.5.6",
+    "@backstage/theme": "^0.6.4",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-router-dom": "^6.28.0",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
-    "react": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.13.1 || ^17.0.0 || ^18.0.0",
-    "react-router-dom": "6.0.0-beta.0 || ^6.3.0"
+    "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.25.0",
-    "@backstage/core-app-api": "^1.12.0",
-    "@backstage/dev-utils": "^1.0.25",
-    "@backstage/test-utils": "^1.5.10",
-    "@testing-library/dom": "^10.4.0",
+    "@backstage/cli": "^0.31.0",
+    "@backstage/core-app-api": "^1.16.0",
+    "@backstage/dev-utils": "^1.1.8",
+    "@backstage/test-utils": "^1.7.6",
     "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
-    "@types/react-dom": "^18.3.1",
     "msw": "^1.0.0",
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
   },
   "files": [
-    "dist",
-    "config.d.ts"
-  ],
-  "configSchema": "config.d.ts"
+    "dist"
+  ]
 }
