--- a/headlamp-backend/package.json
+++ b/headlamp-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@headlamp-k8s/backstage-plugin-headlamp-backend",
-  "version": "0.1.0-beta-3",
+  "version": "0.1.0-beta-4",
   "backstage": {
     "role": "backend-plugin",
     "pluginId": "headlamp",
@@ -19,6 +19,7 @@
     "directory": "plugins/headlamp-backend"
   },
   "license": "Apache-2.0",
+  "private": false,
   "main": "src/index.ts",
   "types": "src/index.ts",
   "files": [
@@ -49,12 +50,15 @@
     "@backstage/plugin-permission-common": "^0.8.1",
     "@backstage/types": "^1.1.1",
     "@google-cloud/container": "^5.17.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "http-proxy-middleware": "^2.0.0",
     "js-yaml": "^4.1.0",
     "luxon": "^3.5.0",
     "node-fetch": "^2.6.7",
+    "tar": "^6.2.0",
+    "uuid": "^11.1.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
@@ -64,7 +68,8 @@
     "@types/express": "*",
     "@types/supertest": "^2.0.8",
     "msw": "^2.0.8",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "typescript": "^5.3.0"
   },
   "configSchema": "config.d.ts"
 }
