--- a/headlamp/tsconfig.json
+++ b/headlamp/tsconfig.json
@@ -1,14 +1,18 @@
 {
     "compilerOptions": {
-      "lib": ["DOM","ES2020"],
+      "lib": ["DOM", "ES2022"],
       "declaration": true,
       "declarationMap": true,
       "outDir": "dist-types",
       "esModuleInterop": true,
       "jsx": "react",
-      "target": "ES2020",
+      "target": "ES2022",
       "moduleResolution": "node",
-      "module": "ES2020",
+      "module": "ES2022",
+      "skipLibCheck": true,
+      "strict": true,
+      "allowSyntheticDefaultImports": true,
+      "forceConsistentCasingInFileNames": true
     }
   }
   
